--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h2{
     
     float:display; block; margin: auto; width: 40%;;
 }
+
 .addwater{
     
     float:display; block; margin: auto; width: 40%;;
@@ -55,6 +56,11 @@ h5{
     text-align: center;
     font-size: 20px;
     color: #8A9A5B; 
+}
+.video{
+    display: flex;
+    justify-content: center; 
+    align-items: center;
 }
 ul{
     border-style: solid;
